Change the size of social media icons.

--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
   <footer class="white-section" id="footer">
     <div class="container-fluid">
       <p>
-        <i class="social-icon fab fa-twitter"></i>
-        <i class="social-icon fab fa-facebook-f"></i>
-        <i class="social-icon fab fa-instagram"></i>
-        <i class="social-icon fas fa-envelope"></i>
+        <i class="social-icon fab fa-twitter fa-2x"></i>
+        <i class="social-icon fab fa-facebook-f fa-2x"></i>
+        <i class="social-icon fab fa-instagram fa-2x"></i>
+        <i class="social-icon fas fa-envelope fa-2x"></i>
       </p>
       <p>© Copyright 2019 Piggin'der</p>
     </div>
-  </footer>
+  </footer> 
 </body>
 </html>
